Update sonarUtils.groovy